# DemoOpenApi/quan/MISA.OpenApi/src/MISA.OAS.OpenApi.SDK/Model/ResponseResult.cs
@@ -1,141 +1,0 @@
-/* 
- * Employees
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 1.0
- * 
- * Generated by: https://github.com/openapitools/openapi-generator.git
- */
-
-
-using System;
-using System.Linq;
-using System.IO;
-using System.Text;
-using System.Text.RegularExpressions;
-using System.Collections;
-using System.Collections.Generic;
-using System.Collections.ObjectModel;
-using System.Runtime.Serialization;
-using Newtonsoft.Json;
-using Newtonsoft.Json.Converters;
-using System.ComponentModel.DataAnnotations;
-using OpenAPIDateConverter = MISA.OAS.OpenApi.SDK.Client.OpenAPIDateConverter;
-
-namespace MISA.OAS.OpenApi.SDK.Model
-{
-    /// <summary>
-    /// ResponseResult
-    /// </summary>
-    [DataContract]
-    public partial class ResponseResult :  IEquatable<ResponseResult>, IValidatableObject
-    {
-        /// <summary>
-        /// Initializes a new instance of the <see cref="ResponseResult" /> class.
-        /// </summary>
-        /// <param name="resultMessage">resultMessage.</param>
-        /// <param name="resultStream">resultStream.</param>
-        public ResponseResult(string resultMessage = default(string), string resultStream = default(string))
-        {
-            this.ResultMessage = resultMessage;
-            this.ResultStream = resultStream;
-        }
-        
-        /// <summary>
-        /// Gets or Sets ResultMessage
-        /// </summary>
-        [DataMember(Name="resultMessage", EmitDefaultValue=false)]
-        public string ResultMessage { get; set; }
-
-        /// <summary>
-        /// Gets or Sets ResultStream
-        /// </summary>
-        [DataMember(Name="resultStream", EmitDefaultValue=false)]
-        public string ResultStream { get; set; }
-
-        /// <summary>
-        /// Returns the string presentation of the object
-        /// </summary>
-        /// <returns>String presentation of the object</returns>
-        public override string ToString()
-        {
-            var sb = new StringBuilder();
-            sb.Append("class ResponseResult {\n");
-            sb.Append("  ResultMessage: ").Append(ResultMessage).Append("\n");
-            sb.Append("  ResultStream: ").Append(ResultStream).Append("\n");
-            sb.Append("}\n");
-            return sb.ToString();
-        }
-  
-        /// <summary>
-        /// Returns the JSON string presentation of the object
-        /// </summary>
-        /// <returns>JSON string presentation of the object</returns>
-        public virtual string ToJson()
-        {
-            return JsonConvert.SerializeObject(this, Formatting.Indented);
-        }
-
-        /// <summary>
-        /// Returns true if objects are equal
-        /// </summary>
-        /// <param name="input">Object to be compared</param>
-        /// <returns>Boolean</returns>
-        public override bool Equals(object input)
-        {
-            return this.Equals(input as ResponseResult);
-        }
-
-        /// <summary>
-        /// Returns true if ResponseResult instances are equal
-        /// </summary>
-        /// <param name="input">Instance of ResponseResult to be compared</param>
-        /// <returns>Boolean</returns>
-        public bool Equals(ResponseResult input)
-        {
-            if (input == null)
-                return false;
-
-            return 
-                (
-                    this.ResultMessage == input.ResultMessage ||
-                    (this.ResultMessage != null &&
-                    this.ResultMessage.Equals(input.ResultMessage))
-                ) && 
-                (
-                    this.ResultStream == input.ResultStream ||
-                    (this.ResultStream != null &&
-                    this.ResultStream.Equals(input.ResultStream))
-                );
-        }
-
-        /// <summary>
-        /// Gets the hash code
-        /// </summary>
-        /// <returns>Hash code</returns>
-        public override int GetHashCode()
-        {
-            unchecked // Overflow is fine, just wrap
-            {
-                int hashCode = 41;
-                if (this.ResultMessage != null)
-                    hashCode = hashCode * 59 + this.ResultMessage.GetHashCode();
-                if (this.ResultStream != null)
-                    hashCode = hashCode * 59 + this.ResultStream.GetHashCode();
-                return hashCode;
-            }
-        }
-
-        /// <summary>
-        /// To validate all properties of the instance
-        /// </summary>
-        /// <param name="validationContext">Validation context</param>
-        /// <returns>Validation Result</returns>
-        IEnumerable<System.ComponentModel.DataAnnotations.ValidationResult> IValidatableObject.Validate(ValidationContext validationContext)
-        {
-            yield break;
-        }
-    }
-
-}
